Fix results alignment in all screens

--- a/src/com/googlecode/barongreenback/shared/style.less
+++ b/src/com/googlecode/barongreenback/shared/style.less
@@ -651,7 +651,7 @@ ul.facet {
   padding-top: 10px;
 }
 
-#search-results, .unique-data {
+#search-results, .results-data {
   width: 100%;
   padding-left: 260px;
   box-sizing: border-box;
